--- a/pom.xml
+++ b/pom.xml
@@ -595,6 +595,19 @@
             <version>${camel.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>	
+        	<groupId>org.kubek2k</groupId>
+        	<artifactId>springockito-annotations</artifactId>
+        	<version>1.0.9</version>
+        	<scope>test</scope>
+        </dependency>
+        <dependency>	
+        	<groupId>org.kubek2k</groupId>
+        	<artifactId>springockito</artifactId>
+        	<version>1.0.9</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
