--- a/pom.xml
+++ b/pom.xml
@@ -595,7 +595,17 @@
             <version>${camel.version}</version>
             <scope>test</scope>
         </dependency>
-        
+
+        <!-- EhCache Replication -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-jgroupsreplication</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jgroups</groupId>
+            <artifactId>jgroups</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
