health check valintaperusteet-serviceen ja koostepalveluun

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,5 +46,14 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+	<!-- Health Check -->
+	<servlet>
+		<servlet-name>healthcheck</servlet-name>
+		<servlet-class>fi.vm.sade.generic.healthcheck.SpringAwareHealthCheckServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>healthcheck</servlet-name>
+		<url-pattern>/healthcheck</url-pattern>
+	</servlet-mapping>
 
 </web-app>
