--- a/pom.xml
+++ b/pom.xml
@@ -429,7 +429,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient-cache</artifactId>
+		    <version>4.2.5</version>
+		    <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
