--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
     </build>
 
     <dependencies>
+    	<dependency>
+            <groupId>org.jasig.cas</groupId>
+            <artifactId>cas-client-support-distributed-ehcache</artifactId>
+            <version>3.1.10</version>
+            <exclusions>
+                <exclusion>
+                   <groupId>net.sf.ehcache</groupId>
+		   <artifactId>ehcache</artifactId>
+		</exclusion>
+            </exclusions>
+	</dependency>
     <dependency>
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-jersey-jaxrs_2.10</artifactId>
