--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <version>16.0.1</version>
         </dependency>
         <!-- Internal -->
         <dependency>
