--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
                    <groupId>net.sf.ehcache</groupId>
 		   <artifactId>ehcache</artifactId>
 		</exclusion>
+                <exclusion>
+                	<artifactId>commons-logging</artifactId>
+                	<groupId>commons-logging</groupId>
+                </exclusion>
             </exclusions>
 	</dependency>
     <dependency>
@@ -626,10 +630,6 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
         </dependency>
     </dependencies>
 
