--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
             </exclusions>
         </dependency>
         <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-compress</artifactId>
+        	<version>1.8.1</version>
+        </dependency>
+        <dependency>
         	<groupId>com.sun.jersey.contribs</groupId>
         	<artifactId>jersey-multipart</artifactId>
         	<version>1.18</version>
