--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 
 # Root logger option
-log4j.rootLogger=TRACE, CONSOLE
+log4j.rootLogger=INFO, CONSOLE
 
 # Direct log messages to stdout
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -8,4 +8,4 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 # Package specific logging configurations
-log4j.logger.org.springframework=TRACE
+log4j.logger.org.springframework=WARN
