--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,16 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-sse</artifactId>
+			<version>2.10.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jersey-server</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+        <dependency>
             <groupId>fi.vm.sade.organisaatio</groupId>
             <artifactId>organisaatio-api</artifactId>
             <version>${organisaatio.api.version}</version>
