--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 
 # Root logger option
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=DEBUG, CONSOLE
 
 # Direct log messages to stdout
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
