--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</parent>
 	<properties>
 		<jersey.version>2.10.3</jersey.version>
+		<cxf.version>3.0.1</cxf.version>
 	</properties>
 
 	<build>
@@ -146,7 +147,7 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.4.2</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-spring3</artifactId>
@@ -256,6 +257,12 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jaxb-impl</artifactId>
+					<groupId>com.sun.xml.bind</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -288,6 +295,12 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jaxb-impl</artifactId>
+					<groupId>com.sun.xml.bind</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
