--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.0.0-rc.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor_2.11</artifactId>
 			<version>2.3.6</version>
