--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
 		</dependency>
 		<dependency>
 			<groupId>fi.vm.sade.sijoittelu</groupId>
+			<artifactId>sijoittelu-algoritmi-domain</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fi.vm.sade.sijoittelu</groupId>
 			<artifactId>sijoittelu-tulos-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
