--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-jersey2-jaxrs_2.10</artifactId>
+			<artifactId>swagger-jersey2-jaxrs_2.11</artifactId>
 			<version>${swagger.version}</version>
 			<exclusions>
 				<exclusion>
@@ -73,6 +73,11 @@
 					<groupId>org.glassfish.jersey.containers</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-core_2.11</artifactId>
+			<version>${swagger.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
