--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>fi.vm.sade.valintaperusteet</groupId>
+			<artifactId>http</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.netflix.rxjava</groupId>
 			<artifactId>rxjava-core</artifactId>
 			<version>0.20.6</version>
@@ -683,6 +688,13 @@
 			<version>${camel.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>fi.vm.sade.valintaperusteet</groupId>
+			<artifactId>integration-testing</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<!-- EhCache Replication -->
 		<dependency>
