--- a/pom.xml
+++ b/pom.xml
@@ -96,23 +96,27 @@
 			<version>${swagger.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>jsr311-api</artifactId>
-			<version>1.1.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.jboss.spec</groupId>
 			<artifactId>jboss-javaee-6.0</artifactId>
 			<version>1.0.0.Final</version>
 			<type>pom</type>
 			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>jaxrs-api</artifactId>
+					<groupId>org.jboss.resteasy</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- SADE -->
 		<dependency>
 			<groupId>fi.vm.sade.tarjonta</groupId>
 			<artifactId>tarjonta-api</artifactId>
 			<exclusions>
+				<exclusion>
+					<artifactId>jsr311-api</artifactId>
+					<groupId>javax.ws.rs</groupId>
+				</exclusion>
 				<exclusion>
 					<artifactId>swagger-jaxrs_2.10</artifactId>
 					<groupId>com.wordnik</groupId>
@@ -210,6 +214,10 @@
 			<artifactId>organisaatio-api</artifactId>
 			<version>${organisaatio.api.version}</version>
 			<exclusions>
+				<exclusion>
+					<artifactId>jsr311-api</artifactId>
+					<groupId>javax.ws.rs</groupId>
+				</exclusion>
 				<exclusion>
 					<groupId>org.springframework</groupId>
 					<artifactId>*</artifactId>
