ValintaKoosteTomcat with "it" profile at last startable

--- a/pom.xml
+++ b/pom.xml
@@ -702,6 +702,13 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.kubek2k.mockito.spring</groupId>
+			<artifactId>springockito</artifactId>
+			<version>1.0.0</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 		<!-- EhCache Replication -->
