--- a/pom.xml
+++ b/pom.xml
@@ -685,6 +685,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.codepoetics</groupId>
+			<artifactId>protonpack</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 
 		<!-- Tests -->
 		<dependency>
