--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>fi.vm.sade.auth</groupId>
+			<groupId>fi.vm.sade.authentication</groupId>
 			<artifactId>authentication-domain</artifactId>
-			<version>8.1-SNAPSHOT</version>
+			<version>13.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>joda-time</groupId>
