--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<jersey.version>2.10.3</jersey.version>
 		<cxf.version>3.0.1</cxf.version>
+		<organisaatio.api.version>13.2</organisaatio.api.version>
 	</properties>
 
 	<build>
@@ -26,10 +27,15 @@
 	</build>
 
 	<dependencies>
+	    	<dependency>
+	                 <groupId>fi.vm.sade.rajapinnat</groupId>
+	                 <artifactId>kela-api</artifactId>
+	                 <version>${kela.version}</version>
+	    	</dependency>	
 		<dependency>
-			<groupId>fi.vm.sade.authentication</groupId>
+			<groupId>fi.vm.sade.auth</groupId>
 			<artifactId>authentication-domain</artifactId>
-			<version>13.0-SNAPSHOT</version>
+			<version>8.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>joda-time</groupId>
@@ -685,12 +691,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.codepoetics</groupId>
-			<artifactId>protonpack</artifactId>
-			<version>1.0</version>
-		</dependency>
-
 
 		<!-- Tests -->
 		<dependency>
@@ -715,8 +715,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>fi.vm.sade</groupId>
-			<artifactId>embedded-tomcat</artifactId>
+			<groupId>fi.vm.sade.valintaperusteet</groupId>
+			<artifactId>integration-testing</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
