--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
 	                 <version>${kela.version}</version>
 	    	</dependency>	
 		<dependency>
-			<groupId>fi.vm.sade.auth</groupId>
+			<groupId>fi.vm.sade.authentication</groupId>
 			<artifactId>authentication-domain</artifactId>
-			<version>8.1-SNAPSHOT</version>
+			<version>13.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>joda-time</groupId>
@@ -298,6 +298,11 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.8.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.codepoetics</groupId>
+            <artifactId>protonpack</artifactId>
+            <version>1.0</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -715,8 +720,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>fi.vm.sade.valintaperusteet</groupId>
-			<artifactId>integration-testing</artifactId>
+			<groupId>fi.vm.sade</groupId>
+			<artifactId>embedded-tomcat</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
