--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,17 @@
 	<build>
 		<finalName>${project.artifactId}</finalName>
 	</build>
-
 	<dependencies>
 	    	<dependency>
 	                 <groupId>fi.vm.sade.rajapinnat</groupId>
 	                 <artifactId>kela-api</artifactId>
 	                 <version>${kela.version}</version>
-	    	</dependency>	
+	    	</dependency>
+			<dependency>
+    			<groupId>com.codepoetics</groupId>
+    			<artifactId>protonpack</artifactId>
+    		<version>1.0</version>
+	</dependency>	    		
 		<dependency>
 			<groupId>fi.vm.sade.auth</groupId>
 			<artifactId>authentication-domain</artifactId>
