--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -15,3 +15,5 @@ valintalaskentakoostepalvelu.organisaatioService.rest.url=http://luokka.hard.war
 valintalaskentakoostepalvelu.hakemus.rest.url=https://itest-virkailija.oph.ware.fi/haku-app
 valintalaskentakoostepalvelu.sijoittelu.rest.url=http://localhost:8180/sijoittelu-service/resources
 valintalaskentakoostepalvelu.valintalaskenta.rest.url=http://localhost:8180/valintalaskenta-laskenta-service/resources
+
+valintalaskentakoostepalvelu.maxWorkerCount=8
