--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.netflix.rxjava</groupId>
-			<artifactId>rxjava-core</artifactId>
-			<version>0.20.6</version>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.0.11</version>
 		</dependency>
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
