--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -9,3 +9,5 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 # Package specific logging configurations
 log4j.logger.org.springframework=WARN
+log4j.logger.org.mockserver=WARN
+#log4j.logger.org.eclipse.jetty=DEBUG
