--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -26,3 +26,14 @@ log4j.logger.org.mongodb.morphia=ERROR
 log4j.logger.fi.vm.sade.valinta=INFO
 log4j.logger.fi.vm.sade.sijoittelu=INFO
 log4j.logger.fi.vm.sade.service.service.valintaperusteet=INFO
+
+log4j.additivity.fi.vm.sade.auditlog.Audit=false
+log4j.logger.fi.vm.sade.auditlog.Audit=INFO, AUDIT
+log4j.appender.AUDIT=org.apache.log4j.RollingFileAppender
+log4j.appender.AUDIT.File=${user.home}/tomcat/logs/auditlog_valintalaskentakoostepalvelu.log
+log4j.appender.AUDIT.Append=true
+log4j.appender.AUDIT.MaxFileSize=20MB
+log4j.appender.AUDIT.MaxBackupIndex=20
+log4j.appender.AUDIT.layout=org.apache.log4j.PatternLayout
+log4j.appender.AUDIT.layout.ConversionPattern=%m%n
+log4j.appender.AUDIT.encoding=UTF-8
