Added ftp properties configurable instead of hardcode for kela transfer

--- a/src/main/resources/META-INF/kela.properties
+++ b/src/main/resources/META-INF/kela.properties
@@ -1,6 +1,7 @@
 
 kela.ftp.username=
 kela.ftp.password=
+kela.ftp.parameters=
 kela.ftp.host=ftp1.kela.fi
 kela.ftp.port=21
 kela.ftp.protocol=ftps
