Use new custom CAS filter from java-utils
It should take care of initing the CAS request with correct service URL.
Consequently, the count of modules requiring generic-common is down
to three.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>generic-common</artifactId>
   	</dependency>
 		<dependency>
+      <groupId>fi.vm.sade.java-utils</groupId>
+      <artifactId>opintopolku-cas-servlet-filter</artifactId>
+	  </dependency>
+		<dependency>
 			<groupId>fi.vm.sade</groupId>
 			<artifactId>auditlogger</artifactId>
 		</dependency>
