Get groupEmailId for letter batch

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -4,6 +4,7 @@ valintalaskentakoostepalvelu.valintaperusteService.url=
 valintalaskentakoostepalvelu.valintalaskentaService.url=
 valintalaskentakoostepalvelu.valintaTulosService.url=
 valintalaskentakoostepalvelu.sijoitteluService.url=
+valintalaskentakoostepalvelu.ryhmasahkoposti.url=
 valintalaskentakoostepalvelu.viestintapalvelu.url=
 
 valintalaskentakoostepalvelu.tarjontaService.url=
