Erillishaun Excel vienti lukemaan Valintarekisteristä

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -17,3 +17,5 @@ valintalaskentakoostepalvelu.sijoittelu.rest.url=http://localhost:8180/sijoittel
 valintalaskentakoostepalvelu.valintalaskenta.rest.url=http://localhost:8180/valintalaskenta-laskenta-service/resources
 
 valintalaskentakoostepalvelu.maxWorkerCount=8
+
+valintalaskentakoostepalvelu.read-from-valintarekisteri=false
