--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -12,3 +12,5 @@ valintalaskentakoostepalvelu.koodiService.url=
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=
 valintalaskentakoostepalvelu.hakemus.rest.url=
+
+valintalaskentakoostepalvelu.read-from-valintarekisteri=
