Vaihdettu käyttämään samaa vts-flagia kuin ui

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -18,4 +18,4 @@ valintalaskentakoostepalvelu.valintalaskenta.rest.url=http://localhost:8180/vali
 
 valintalaskentakoostepalvelu.maxWorkerCount=8
 
-valintalaskentakoostepalvelu.read-from-valintarekisteri=false
+valintalaskenta-ui.read-from-valintarekisteri=false
