--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -13,4 +13,4 @@ valintalaskentakoostepalvelu.koodiService.url=
 valintalaskentakoostepalvelu.tarjonta.rest.url=
 valintalaskentakoostepalvelu.hakemus.rest.url=
 
-valintalaskentakoostepalvelu.read-from-valintarekisteri=
+valintalaskenta-ui.read-from-valintarekisteri=
