use new many oppijas API from sure

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -74,6 +74,7 @@ sijoittelu-service.tila.erillishaku.hakukohde=${baseurl-sijoittelu-service}/sijo
 
 suoritusrekisteri.oppijat=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/oppijat
 suoritusrekisteri.oppijat.opiskelijaoid=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/oppijat/$1
+suoritusrekisteri.oppijat.opiskelijaoid.many=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/oppijat/many/$1
 suoritusrekisteri.arvosanat=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/arvosanat
 suoritusrekisteri.arvosanat.id=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/arvosanat/$1
 suoritusrekisteri.suoritukset=${baseurl-suoritusrekisteri}/suoritusrekisteri/rest/v1/suoritukset
