HyvaksymiskirjeetKokoHaulleService ja HyvaksymiskirjeetHaulleHakukohteittain käyttämään Valintarekisteriä

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -129,6 +129,7 @@ valinta-tulos-service.sijoittelu.sijoitteluajo.hakukohde=${baseurl-valinta-tulos
 valinta-tulos-service.haku.sijoitteluajo.latest.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/sijoitteluajo/latest/hakemus/$3
 valinta-tulos-service.haku.hakukohde.hakijat=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hakijat
 valinta-tulos-service.haku.hakukohde.hyvaksytyt=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hyvaksytyt
+valinta-tulos-service.haku.hyvaksytyt=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hyvaksytyt
 valinta-tulos-service.haku.ilmanhyvaksyntaa=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/ilmanHyvaksyntaa
 
 viestintapalvelu.reportMessages=${baseurl-viestintapalvelu}/ryhmasahkoposti-service/reportMessages/view/letter/$1
