fetch koodiuri from rest API

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -32,6 +32,7 @@ haku-app.applications.additionaldata=${baseurl-haku-app}/haku-app/applications/a
 haku-app.applications.state.passivate=${baseurl-haku-app}/haku-app/applications/state/passivate
 
 koodisto-service.json.oid.koodi=${baseurl-koodisto-service}/koodisto-service/rest/json/$1/koodi
+koodisto-service.koodiuri=${baseurl-koodisto-service}/koodisto-service/rest/codeelement/$1
 
 ohjausparametrit-service.parametri=${baseurl-ohjausparametrit-service}/ohjausparametrit-service/api/v1/rest/parametri/$1
 
