VtsSijoittelunTulos -resource added

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -125,6 +125,7 @@ valinta-tulos-service.virkailija.tilahakijalle.haku.hakukohde.valintatapajono=${
 valinta-tulos-service.virkailija.vastaanotto.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto/hakukohde/$1
 valinta-tulos-service.virkailija.vastaanotto.poista=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto/poista
 valinta-tulos-service.virkailija.vastaanotto=${baseurl-valinta-tulos-service}/valinta-tulos-service/virkailija/vastaanotto
+valinta-tulos-service.sijoitteluntulos=${baseurl-valinta-tulos-service}/valinta-tulos-service/sijoitteluntulos/$1/sijoitteluajo/$2/hakukohde/$3
 valinta-tulos-service.sijoittelu.sijoitteluajo.hakukohde=${baseurl-valinta-tulos-service}/valinta-tulos-service/sijoittelu/$1/sijoitteluajo/$2/hakukohde/$3
 valinta-tulos-service.haku.sijoitteluajo.latest.hakemus=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/sijoitteluajo/latest/hakemus/$2
 valinta-tulos-service.haku.hakukohde.hakijat=${baseurl-valinta-tulos-service}/valinta-tulos-service/haku/$1/hakukohde/$2/hakijat
