Muutettu sijoittelun rajapintakutsut pollaaviksi, lisätty uusi endpoint sijoitteluajon tilan seuraamiseen.
Lisäksi samalla varmistetaan, että samalle haulle ei luoda uutta sijoitteluajoa kun jos edellinen on vielä KESKEN.
Seurauksena haulle voi olla vain yksi sijoitteluajo käynnissä samanaikaisesti.

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -59,6 +59,8 @@ seuranta-service.seuranta.kuormantasaus.laskenta.hakukohde.tila=${baseurl-seuran
 seuranta-service.seuranta.kuormantasaus.laskenta.hakukohde=${baseurl-seuranta-service}/seuranta-service/resources/seuranta/kuormantasaus/laskenta/$1/hakukohde/$2
 
 sijoittelu-service.sijoittele=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittele/$1
+sijoittelu-service.sijoittele.ajontila=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittele/ajontila/$1
+sijoittelu-service.sijoittele.hauntila=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittele/hauntila/$1
 sijoittelu-service.sijoittelu.sijoitteluajo.hakukohde=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittelu/$1/sijoitteluajo/$2/hakukohde/$3
 sijoittelu-service.sijoittelu.hyvaksytyt.hakukohde=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittelu/$1/hyvaksytyt/hakukohde/$2
 sijoittelu-service.sijoittelu.sijoitteluajo.latest.hakemus=${baseurl-sijoittelu-service}/sijoittelu-service/resources/sijoittelu/$1/sijoitteluajo/latest/hakemus/$2
