Pientä refaktorointia rajapintakutsuihin, palautusarvojen standardointi omaksi luokakseen

--- a/pom.xml
+++ b/pom.xml
@@ -695,7 +695,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>fi.vm.sade.valintaperusteet</groupId>
+            <artifactId>valintalaskenta-domain</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
