--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -80,6 +80,7 @@ tarjonta-service.hakukohde.hakukohdeoid=${baseurl-tarjonta-service}/tarjonta-ser
 tarjonta-service.haku.findoidstosynctarjontafor=${baseurl-tarjonta-service}/tarjonta-service/rest/v1/haku/findOidsToSyncTarjontaFor
 
 valintalaskenta-laskenta-service.valintalaskentakoostepalvelu.hakukohde.valinnanvaihe=${baseurl-valintalaskenta-laskenta-service}/valintalaskenta-laskenta-service/resources/valintalaskentakoostepalvelu/hakukohde/$1/valinnanvaihe
+valintalaskenta-laskenta-service.valintalaskenta.status=${baseurl-valintalaskenta-laskenta-service}/valintalaskenta-laskenta-service/resources/valintalaskenta/status/$1/hakukohde/$2
 valintalaskenta-laskenta-service.valintalaskenta.laske=${baseurl-valintalaskenta-laskenta-service}/valintalaskenta-laskenta-service/resources/valintalaskenta/laske
 valintalaskenta-laskenta-service.valintalaskenta.valintakokeet=${baseurl-valintalaskenta-laskenta-service}/valintalaskenta-laskenta-service/resources/valintalaskenta/valintakokeet
 valintalaskenta-laskenta-service.valintalaskenta.laskekaikki=${baseurl-valintalaskenta-laskenta-service}/valintalaskenta-laskenta-service/resources/valintalaskenta/laskekaikki
